// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renders CSF2Secondary story 1`] = `
<body>
  <div
    id="root9"
    ng-version="17.3.0"
  >
    <storybook-testing-wrapper>
      <storybook-button
        ng-reflect-label="label coming from story args!"
        ng-reflect-primary="false"
      >
        <button
          class="storybook-button storybook-button--medium storybook-button--secondary"
          type="button"
        >
           label coming from story args! 
        </button>
      </storybook-button>
      <!--container-->
    </storybook-testing-wrapper>
  </div>
</body>
`;

exports[`Renders CSF2StoryWithParamsAndDecorator story 1`] = `
<body>
  <div
    id="root10"
    ng-version="17.3.0"
  >
    <storybook-testing-wrapper>
      <div
        style="margin: 3em;"
      >
        undefined
      </div>
    </storybook-testing-wrapper>
  </div>
</body>
`;

exports[`Renders CSF3Button story 1`] = `
<body>
  <div
    id="root12"
    ng-version="17.3.0"
  >
    <storybook-testing-wrapper>
      <storybook-button
        ng-reflect-label="foo"
        ng-reflect-primary="false"
      >
        <button
          class="storybook-button storybook-button--medium storybook-button--secondary"
          type="button"
        >
           foo 
        </button>
      </storybook-button>
      <!--container-->
    </storybook-testing-wrapper>
  </div>
</body>
`;

exports[`Renders CSF3ButtonWithRender story 1`] = `
<body>
  <div
    id="root13"
    ng-version="17.3.0"
  >
    <storybook-testing-wrapper>
      <div>
        <p
          data-testid="custom-render"
        >
          I am a custom render function
        </p>
         undefined 
      </div>
    </storybook-testing-wrapper>
  </div>
</body>
`;

exports[`Renders CSF3InputFieldFilled story 1`] = `
<body>
  <div
    id="root14"
    ng-version="17.3.0"
  >
    <storybook-testing-wrapper>
      <input
        data-testid="input"
      />
    </storybook-testing-wrapper>
  </div>
</body>
`;

exports[`Renders CSF3Primary story 1`] = `
<body>
  <div
    id="root11"
    ng-version="17.3.0"
  >
    <storybook-testing-wrapper>
      <storybook-button
        ng-reflect-label="foo"
        ng-reflect-primary="true"
        ng-reflect-size="large"
      >
        <button
          class="storybook-button storybook-button--large storybook-button--primary"
          type="button"
        >
           foo 
        </button>
      </storybook-button>
      <!--container-->
    </storybook-testing-wrapper>
  </div>
</body>
`;

exports[`Renders LoaderStory story 1`] = `
<body>
  <div
    id="root15"
    ng-version="17.3.0"
  >
    <storybook-testing-wrapper>
      <div>
        <div
          data-testid="loaded-data"
        >
          loaded data
        </div>
        <div
          data-testid="spy-data"
        >
          mockFn return value
        </div>
      </div>
    </storybook-testing-wrapper>
  </div>
</body>
`;
